# PlanTracker

./: .env.example  .gitignore  ARCHITECTURE.md  CICD.md  ProjectDescription.md  README.md  SERVER.md  backend-trivy.txt  deploy.sh  docker-compose.test.yml  docker-compose.yml  frontend-trivy.txt  test-deployment.sh
.github/workflows/: backend.yml  deploy-frontend.yml  docker-build.yml  frontend.yml  main.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  env_settings.txt  pyproject.toml  requirements.txt  sonar-project.properties
backend/app/: auth.py  config.py  database.py  email_utils.py  main.py  models.py  schemas.py  telegram_bot.py
backend/tests/: README.md  conftest.py  test_activities.py  test_auth.py  test_database.py  test_main.py  test_schemas.py  test_tags.py  test_telegram_bot.py  test_users.py
frontend/: Dockerfile  README.md  healthcheck.sh  index.html  package-lock.json  package.json  vite.config.ts
frontend/e2e_tests/: .gitignore  README.md  __init__.py  after_login.html  check_after_login.py  check_page.py  check_register_page.py  conftest.py  deploy_to_github_pages.py  page_structure.html  pyproject.toml  register_and_login.py  register_structure.html  run_tests.py
frontend/e2e_tests/pages/: __init__.py  base_page.py  login_page.py  register_page.py  task_page.py  tasks_page.py
frontend/e2e_tests/tests/: __init__.py  test_login.py  test_register.py  test_registration.py  test_task_workflow.py  test_tasks.py
frontend/e2e_tests/utils/: __init__.py  deploy_utils.py
k6-tests/: basic-test.js  overload-test.js
(+54 files in other folders)
